[tool.poetry]
name = "pyplot-timeseries"
version = "1.0.0"
description = ""
authors = ["Michael Verdegaal <michaelverdegaal@hotmail.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.1"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"
numpy = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
